--- a/Dockerfile-arm
+++ b/Dockerfile-arm
@@ -9,7 +9,7 @@ RUN 	apt-get install -y \
 	net-tools
 RUN     mkdir -p /opt/infinit \
 	&&	cd /opt/infinit \
-	&&	curl -q --output infinit.tbz https://storage.googleapis.com/sh_infinit_releases/raspberry/infinit-arm-0.7.3.tar.gz \
+	&&	curl -q --output infinit.tgz https://storage.googleapis.com/sh_infinit_releases/raspberry/infinit-arm-0.7.3.tar.gz \
 	&&	tar xzf infinit.tgz --strip-components=1 -C . \
 	&&	rm infinit.tgz
 COPY 	pod-setup.sh /root/
